logs/action/web/main/pqc.log
2026-03-07 00:37:37,575 - ERROR - Compilation failed for pqc:
2026-03-07 00:37:37,575 - ERROR - shared:INFO: (Emscripten: Running sanity checks)
/home/runner/work/NextSSL/NextSSL/src/utils/wasm_selftest.c:22:5: error: use of undeclared identifier 'sha256_ctx'
   22 |     sha256_ctx ctx;
      |     ^
/home/runner/work/NextSSL/NextSSL/src/utils/wasm_selftest.c:23:18: error: use of undeclared identifier 'ctx'
   23 |     sha256_init(&ctx);
      |                  ^
/home/runner/work/NextSSL/NextSSL/src/utils/wasm_selftest.c:24:20: error: use of undeclared identifier 'ctx'
   24 |     sha256_update(&ctx, (const uint8_t *)"abc", 3);
      |                    ^
/home/runner/work/NextSSL/NextSSL/src/utils/wasm_selftest.c:25:19: error: use of undeclared identifier 'ctx'
   25 |     sha256_final(&ctx, digest);
      |                   ^
4 errors generated.
emcc: error: '/home/runner/work/NextSSL/NextSSL/emsdk/upstream/bin/clang -target wasm32-unknown-emscripten -fignore-exceptions -mllvm -combiner-global-alias-analysis=false -mllvm -enable-emscripten-sjlj -mllvm -disable-lsr --sysroot=/home/runner/work/NextSSL/NextSSL/emsdk/upstream/emscripten/cache/sysroot -DEMSCRIPTEN -Werror=implicit-function-declaration -Xclang -iwithsysroot/include/fakesdl -Xclang -iwithsysroot/include/compat -O2 -Wall -ffile-prefix-map=.=. -fmacro-prefix-map=.=. -Wno-builtin-macro-redefined -D__DATE__= -D__TIME__= -D__TIMESTAMP__= -I/home/runner/work/NextSSL/NextSSL/src -I/home/runner/work/NextSSL/NextSSL/src/include -I/home/runner/work/NextSSL/NextSSL/src/primitives -I/home/runner/work/NextSSL/NextSSL/src/primitives/hash/fast/blake3 -I/home/runner/work/NextSSL/NextSSL/src/primitives/hash/memory_hard/utils -I/home/runner/work/NextSSL/NextSSL/src/legacy/alive -I/home/runner/work/NextSSL/NextSSL/src/legacy/unsafe -I/home/runner/work/NextSSL/NextSSL/src/utils -I/home/runner/work/NextSSL/NextSSL/src/PQCrypto -I/home/runner/work/NextSSL/NextSSL/src/PQCrypto/common -I/home/runner/work/NextSSL/NextSSL/src/PQCrypto/crypto_kem/ml-kem-512/clean/ -I/home/runner/work/NextSSL/NextSSL/src/PQCrypto/crypto_kem/ml-kem-768/clean/ -I/home/runner/work/NextSSL/NextSSL/src/PQCrypto/crypto_kem/ml-kem-1024/clean/ -I/home/runner/work/NextSSL/NextSSL/src/PQCrypto/crypto_kem/hqc-128/clean/ -I/home/runner/work/NextSSL/NextSSL/src/PQCrypto/crypto_kem/hqc-192/clean/ -I/home/runner/work/NextSSL/NextSSL/src/PQCrypto/crypto_kem/hqc-256/clean/ -I/home/runner/work/NextSSL/NextSSL/src/PQCrypto/crypto_kem/mceliece348864/clean/ -I/home/runner/work/NextSSL/NextSSL/src/PQCrypto/crypto_kem/mceliece348864f/clean/ -I/home/runner/work/NextSSL/NextSSL/src/PQCrypto/crypto_kem/mceliece460896/clean/ -I/home/runner/work/NextSSL/NextSSL/src/PQCrypto/crypto_kem/mceliece460896f/clean/ -I/home/runner/work/NextSSL/NextSSL/src/PQCrypto/crypto_kem/mceliece6688128/clean/ -I/home/runner/work/NextSSL/NextSSL/src/PQCrypto/crypto_kem/mceliece6688128f/clean/ -I/home/runner/work/NextSSL/NextSSL/src/PQCrypto/crypto_kem/mceliece6960119/clean/ -I/home/runner/work/NextSSL/NextSSL/src/PQCrypto/crypto_kem/mceliece6960119f/clean/ -I/home/runner/work/NextSSL/NextSSL/src/PQCrypto/crypto_kem/mceliece8192128/clean/ -I/home/runner/work/NextSSL/NextSSL/src/PQCrypto/crypto_kem/mceliece8192128f/clean/ -I/home/runner/work/NextSSL/NextSSL/src/PQCrypto/crypto_sign/ml-dsa-44/clean/ -I/home/runner/work/NextSSL/NextSSL/src/PQCrypto/crypto_sign/ml-dsa-65/clean/ -I/home/runner/work/NextSSL/NextSSL/src/PQCrypto/crypto_sign/ml-dsa-87/clean/ -I/home/runner/work/NextSSL/NextSSL/src/PQCrypto/crypto_sign/falcon-512/clean/ -I/home/runner/work/NextSSL/NextSSL/src/PQCrypto/crypto_sign/falcon-1024/clean/ -I/home/runner/work/NextSSL/NextSSL/src/PQCrypto/crypto_sign/falcon-padded-512/clean/ -I/home/runner/work/NextSSL/NextSSL/src/PQCrypto/crypto_sign/falcon-padded-1024/clean/ -I/home/runner/work/NextSSL/NextSSL/src/PQCrypto/crypto_sign/sphincs-sha2-128f-simple/clean/ -I/home/runner/work/NextSSL/NextSSL/src/PQCrypto/crypto_sign/sphincs-sha2-128s-simple/clean/ -I/home/runner/work/NextSSL/NextSSL/src/PQCrypto/crypto_sign/sphincs-sha2-192f-simple/clean/ -I/home/runner/work/NextSSL/NextSSL/src/PQCrypto/crypto_sign/sphincs-sha2-192s-simple/clean/ -I/home/runner/work/NextSSL/NextSSL/src/PQCrypto/crypto_sign/sphincs-sha2-256f-simple/clean/ -I/home/runner/work/NextSSL/NextSSL/src/PQCrypto/crypto_sign/sphincs-sha2-256s-simple/clean/ -I/home/runner/work/NextSSL/NextSSL/src/PQCrypto/crypto_sign/sphincs-shake-128f-simple/clean/ -I/home/runner/work/NextSSL/NextSSL/src/PQCrypto/crypto_sign/sphincs-shake-128s-simple/clean/ -I/home/runner/work/NextSSL/NextSSL/src/PQCrypto/crypto_sign/sphincs-shake-192f-simple/clean/ -I/home/runner/work/NextSSL/NextSSL/src/PQCrypto/crypto_sign/sphincs-shake-192s-simple/clean/ -I/home/runner/work/NextSSL/NextSSL/src/PQCrypto/crypto_sign/sphincs-shake-256f-simple/clean/ -I/home/runner/work/NextSSL/NextSSL/src/PQCrypto/crypto_sign/sphincs-shake-256s-simple/clean/ -DBLAKE3_NO_AVX2 -DBLAKE3_NO_AVX512 -DBLAKE3_NO_SSE2 -DBLAKE3_NO_SSE41 -DBLAKE3_NO_THREADING -DBLAKE3_ATOMICS=0 -DENABLE_ML_KEM -DENABLE_HQC -DENABLE_MCELIECE -DENABLE_ML_DSA -DENABLE_FALCON -DENABLE_SPHINCS /home/runner/work/NextSSL/NextSSL/src/utils/wasm_selftest.c -c -o /tmp/emscripten_temp_78ekloaf/wasm_selftest_454.o' failed (returned 1)

2026-03-07 00:46:01,067 - ERROR - Compilation failed for pqc:
2026-03-07 00:46:01,067 - ERROR - shared:INFO: (Emscripten: Running sanity checks)
cache:INFO: generating system asset: symbol_lists/c4c6d4249c65015417905d0cf0f2248647634581.json... (this will be cached in "/home/runner/work/NextSSL/NextSSL/emsdk/upstream/emscripten/cache/symbol_lists/c4c6d4249c65015417905d0cf0f2248647634581.json" for subsequent builds)
cache:INFO:  - ok
wasm-ld: error: /tmp/emscripten_temp_sd6uhs28/wasm_selftest_454.o: undefined symbol: sha256_init
wasm-ld: error: /tmp/emscripten_temp_sd6uhs28/wasm_selftest_454.o: undefined symbol: sha256_update
wasm-ld: error: /tmp/emscripten_temp_sd6uhs28/wasm_selftest_454.o: undefined symbol: sha256_final
emcc: error: '/home/runner/work/NextSSL/NextSSL/emsdk/upstream/bin/wasm-ld @/tmp/emscripten_fc_7t6j3.rsp.utf-8' failed (returned 1)

2026-03-07 00:58:29,850 - INFO - Successfully built pqc
2026-03-07 00:58:29,918 - INFO - [PASS] WASM present: /home/runner/work/NextSSL/NextSSL/bin/web/main/pqc.wasm
2026-03-07 00:58:29,927 - INFO - [PASS] WASM execute ok: /home/runner/work/NextSSL/NextSSL/bin/web/main/pqc.wasm
2026-03-07 01:46:22,297 - INFO - Successfully built pqc
